main.tf
provider "aws" { 
region = var.aws_region 
} 
#Create security group with firewall rules 
resource "aws_security_group" "security_jenkins_port" { 
name = "security_jenkins_port" 
description = "security group for jenkins" 
ingress { 
from_port = 8080 
to_port = 8080 
protocol = "tcp" 
cidr_blocks = ["0.0.0.0/0"] 
} 
ingress { 
from_port = 22 
to_port = 22 
protocol = "tcp" 
cidr_blocks = ["0.0.0.0/0"] 
} 
# outbound from jenkis server
Department of Information Technology | APSIT 
 
egress { 
from_port = 0 
to_port = 65535 
protocol = "tcp" 
cidr_blocks = ["0.0.0.0/0"] 
} 
tags= { 
Name = "security_jenkins_port" 
} 
} 
resource "aws_instance" "myFirstInstance" { 
ami = "ami-0b9064170e32bde34" 
key_name = var.key_name 
instance_type = var.instance_type 
security_groups= [ "security_jenkins_port"] 
tags= { 
Name = "jenkins_instance" 
} 
}
